# beacon-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  QUICK_START.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: implementation_guide.md
scripts/: bundle_schemas.js  compare_models.py  sync_beacon_schemas.sh
src/beacon_api/: __init__.py  main.py
src/beacon_api/api/: __init__.py  analyses.py  biosamples.py  cohorts.py  configuration.py  datasets.py  dependencies.py  entry_types.py  genomic_variations.py  individuals.py  info.py  map.py  monitor.py  query_params.py  response_utils.py  runs.py
src/beacon_api/core/: __init__.py  beacon_catalog.py  config.py
src/beacon_api/models/: __init__.py  common.py  common_types.py  entities.py  request.py  response.py
src/beacon_api/services/: __init__.py  base.py  stubs.py
src/beacon_skeleton/: __init__.py  main.py
src/beacon_skeleton/api/: __init__.py  analyses.py  biosamples.py  cohorts.py  datasets.py  dependencies.py  genomic_variations.py  individuals.py  info.py  runs.py
src/beacon_skeleton/core/: __init__.py  config.py
src/beacon_skeleton/models/: __init__.py  common.py  request.py  response.py
src/beacon_skeleton/services/: __init__.py  base.py
src/fast_beacon/: __init__.py  main.py
src/fast_beacon/api/: __init__.py  analyses.py  biosamples.py  cohorts.py  datasets.py  dependencies.py  genomic_variations.py  individuals.py  info.py  runs.py
src/fast_beacon/core/: __init__.py
src/fast_beacon/models/: __init__.py  entities.py  response.py
src/fast_beacon/services/: __init__.py  base.py
tests/: __init__.py  test_filter_parsing.py  test_info.py  test_main.py
